Bring back jdk1.8 branch to 5.1