@@ -2,8 +2,9 @@ package com.c4soft.springaddons.tutorials;
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 import java.util.Map;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.springframework.boot.autoconfigure.web.ServerProperties;
@@ -11,32 +12,33 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
-import org.springframework.security.authentication.AbstractAuthenticationToken;
 import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
-import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.csrf.CookieCsrfTokenRepository;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import lombok.RequiredArgsConstructor;
+
 @EnableWebSecurity
 @EnableGlobalMethodSecurity(prePostEnabled = true)
-public class WebSecurityConfig {
-	@Bean
-	public
-			SecurityFilterChain
-			filterChain(HttpSecurity http, Converter<Jwt, ? extends AbstractAuthenticationToken> authenticationConverter, ServerProperties serverProperties)
-					throws Exception {
+@RequiredArgsConstructor
+public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
+	private final ServerProperties serverProperties;
+
+	@Override
+	protected void configure(HttpSecurity http) throws Exception {
 
 		// Enable OIDC
-		http.oauth2ResourceServer().jwt().jwtAuthenticationConverter(authenticationConverter);
+		http.oauth2ResourceServer().jwt().jwtAuthenticationConverter(authenticationConverter(authoritiesConverter()));
 
 		// Enable anonymous
 		http.anonymous();
@@ -69,8 +71,6 @@ public class WebSecurityConfig {
 				.antMatchers("/actuator/health/readiness", "/actuator/health/liveness", "/v3/api-docs/**").permitAll()
 				.anyRequest().authenticated();
 		// @formatter:on
-
-		return http.build();
 	}
 
 	public interface Jw2tAuthoritiesConverter extends Converter<Jwt, Collection<? extends GrantedAuthority>> {
@@ -90,28 +90,28 @@ public class WebSecurityConfig {
 		// This is a converter for roles as embedded in the JWT by a Keycloak server
 		// Roles are taken from both realm_access.roles & resource_access.{client}.roles
 		return jwt -> {
-			final var realmAccess = (Map<String, Object>) jwt.getClaims().getOrDefault("realm_access", Map.of());
-			final var realmRoles = (Collection<String>) realmAccess.getOrDefault("roles", List.of());
+			final Map<String, Object> realmAccess = (Map<String, Object>) jwt.getClaims().getOrDefault("realm_access", Collections.emptyMap());
+			final Collection<String> realmRoles = (Collection<String>) realmAccess.getOrDefault("roles", Collections.emptyList());
 
-			final var resourceAccess = (Map<String, Object>) jwt.getClaims().getOrDefault("resource_access", Map.of());
+			final Map<String, Object> resourceAccess = (Map<String, Object>) jwt.getClaims().getOrDefault("resource_access", Collections.emptyMap());
 			// We assume here you have a "spring-addons" client configure in your Keycloak realm
-			final var clientAccess = (Map<String, Object>) resourceAccess.getOrDefault("spring-addons", Map.of());
-			final var clientRoles = (Collection<String>) clientAccess.getOrDefault("roles", List.of());
+			final Map<String, Object> clientAccess = (Map<String, Object>) resourceAccess.getOrDefault("spring-addons", Collections.emptyMap());
+			final Collection<String> clientRoles = (Collection<String>) clientAccess.getOrDefault("roles", Collections.emptyList());
 
-			return Stream.concat(realmRoles.stream(), clientRoles.stream()).map(SimpleGrantedAuthority::new).toList();
+			return Stream.concat(realmRoles.stream(), clientRoles.stream()).map(SimpleGrantedAuthority::new).collect(Collectors.toList());
 		};
 	}
 
 	private CorsConfigurationSource corsConfigurationSource() {
 		// Very permissive CORS config...
-		final var configuration = new CorsConfiguration();
+		final CorsConfiguration configuration = new CorsConfiguration();
 		configuration.setAllowedOrigins(Arrays.asList("*"));
 		configuration.setAllowedMethods(Arrays.asList("*"));
 		configuration.setAllowedHeaders(Arrays.asList("*"));
 		configuration.setExposedHeaders(Arrays.asList("*"));
 
 		// Limited to API routes (neither actuator nor Swagger-UI)
-		final var source = new UrlBasedCorsConfigurationSource();
+		final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 		source.registerCorsConfiguration("/greet/**", configuration);
 
 		return source;
