@@ -2,10 +2,12 @@ package com.c4_soft.springaddons.security.oauth2.config;
 
 import java.io.Serializable;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.springframework.security.core.GrantedAuthority;
@@ -23,13 +25,10 @@ public class ConfigurableClaimSet2AuthoritiesConverter<T extends Map<String, Obj
 
 	@Override
 	public Collection<? extends GrantedAuthority> convert(T source) {
-		final var authoritiesMappingProperties = getAuthoritiesMappingProperties(source);
-		return Stream
-				.of(authoritiesMappingProperties.getClaims())
-				.flatMap(rolesPath -> getRoles(source, rolesPath))
+		final SimpleAuthoritiesMappingProperties authoritiesMappingProperties = getAuthoritiesMappingProperties(source);
+		return Stream.of(authoritiesMappingProperties.getClaims()).flatMap(rolesPath -> getRoles(source, rolesPath))
 				.map(r -> String.format("%s%s", authoritiesMappingProperties.getPrefix(), processCase(r, authoritiesMappingProperties.getCaze())))
-				.map(r -> (GrantedAuthority) new SimpleGrantedAuthority(r))
-				.toList();
+				.map(r -> (GrantedAuthority) new SimpleGrantedAuthority(r)).collect(Collectors.toList());
 	}
 
 	private String processCase(String role, Case caze) {
@@ -46,9 +45,7 @@ public class ConfigurableClaimSet2AuthoritiesConverter<T extends Map<String, Obj
 	}
 
 	private SimpleAuthoritiesMappingProperties getAuthoritiesMappingProperties(T claimSet) {
-		return Stream
-				.of(properties.getIssuers())
-				.filter(ap -> Objects.equals(ap.getLocation().toString(), claimSet.get(JwtClaimNames.ISS).toString()))
+		return Stream.of(properties.getIssuers()).filter(ap -> Objects.equals(ap.getLocation().toString(), claimSet.get(JwtClaimNames.ISS).toString()))
 				.findAny()
 				.orElseThrow(
 						() -> new MissingAuthorizationServerConfigurationException(
@@ -57,13 +54,13 @@ public class ConfigurableClaimSet2AuthoritiesConverter<T extends Map<String, Obj
 	}
 
 	private static Stream<String> getRoles(Map<String, Object> claims, String rolesPath) {
-		final var claimsToWalk = rolesPath.split("\\.");
-		var i = 0;
-		var obj = Optional.of(claims);
+		final String[] claimsToWalk = rolesPath.split("\\.");
+		int i = 0;
+		Optional<Map<String, Object>> obj = Optional.of(claims);
 		while (i++ < claimsToWalk.length) {
-			final var claimName = claimsToWalk[i - 1];
+			final String claimName = claimsToWalk[i - 1];
 			if (i == claimsToWalk.length) {
-				return obj.map(o -> (List<Object>) o.get(claimName)).orElse(List.of()).stream().map(Object::toString);
+				return obj.map(o -> (List<Object>) o.get(claimName)).orElse(Collections.emptyList()).stream().map(Object::toString);
 			}
 			obj = obj.map(o -> (Map<String, Object>) o.get(claimName));
 
