@@ -4,20 +4,26 @@ import java.io.Serializable;
 import java.nio.charset.Charset;
 import java.util.Arrays;
 import java.util.Map;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import org.springframework.boot.autoconfigure.AutoConfiguration;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnMissingBean;
 import org.springframework.boot.autoconfigure.security.oauth2.resource.OAuth2ResourceServerProperties;
 import org.springframework.boot.autoconfigure.web.ServerProperties;
 import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Import;
+import org.springframework.core.io.buffer.DataBuffer;
+import org.springframework.core.io.buffer.DataBufferFactory;
 import org.springframework.core.io.buffer.DataBufferUtils;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
+import org.springframework.http.server.reactive.ServerHttpResponse;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.authentication.AnonymousAuthenticationToken;
 import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
 import org.springframework.security.config.web.server.ServerHttpSecurity;
+import org.springframework.security.config.web.server.ServerHttpSecurity.CsrfSpec;
 import org.springframework.security.oauth2.server.resource.introspection.ReactiveOpaqueTokenIntrospector;
 import org.springframework.security.web.server.SecurityWebFilterChain;
 import org.springframework.security.web.server.authorization.ServerAccessDeniedHandler;
@@ -26,6 +32,7 @@ import org.springframework.security.web.server.csrf.CookieServerCsrfTokenReposit
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.reactive.CorsConfigurationSource;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
+import org.springframework.web.server.ServerWebExchange;
 
 import com.c4_soft.springaddons.security.oauth2.OpenidClaimSet;
 import com.c4_soft.springaddons.security.oauth2.config.ClaimSet2AuthoritiesConverter;
@@ -39,8 +46,8 @@ import reactor.core.publisher.Mono;
 /**
  * <p>
  * <b>Usage</b><br>
- * If not using spring-boot, &#64;Import or &#64;ComponentScan this class. All beans defined here are &#64;ConditionalOnMissingBean => just
- * define your own &#64;Beans to override.
+ * If not using spring-boot, &#64;Import or &#64;ComponentScan this class. All beans defined here are &#64;ConditionalOnMissingBean =&gt;
+ * just define your own &#64;Beans to override.
  * </p>
  * <p>
  * <b>Provided &#64;Beans</b>
@@ -62,7 +69,7 @@ import reactor.core.publisher.Mono;
  * @author Jerome Wacongne ch4mp&#64;c4-soft.com
  */
 @EnableWebFluxSecurity
-@AutoConfiguration
+@Configuration
 @Slf4j
 @Import(SpringAddonsSecurityProperties.class)
 public class ReactiveSecurityBeans {
@@ -117,10 +124,10 @@ public class ReactiveSecurityBeans {
 	}
 
 	private CorsConfigurationSource corsConfigurationSource(SpringAddonsSecurityProperties securityProperties) {
-		log.debug("Building default CorsConfigurationSource with: {}", Stream.of(securityProperties.getCors()).toList());
-		final var source = new UrlBasedCorsConfigurationSource();
-		for (final var corsProps : securityProperties.getCors()) {
-			final var configuration = new CorsConfiguration();
+		log.debug("Building default CorsConfigurationSource with: {}", Stream.of(securityProperties.getCors()).collect(Collectors.toList()));
+		final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+		for (final SpringAddonsSecurityProperties.CorsProperties corsProps : securityProperties.getCors()) {
+			final CorsConfiguration configuration = new CorsConfiguration();
 			configuration.setAllowedOrigins(Arrays.asList(corsProps.getAllowedOrigins()));
 			configuration.setAllowedMethods(Arrays.asList(corsProps.getAllowedMethods()));
 			configuration.setAllowedHeaders(Arrays.asList(corsProps.getAllowedHeaders()));
@@ -163,12 +170,12 @@ public class ReactiveSecurityBeans {
 	@Bean
 	ServerAccessDeniedHandler serverAccessDeniedHandler() {
 		log.debug("Building default ServerAccessDeniedHandler");
-		return (var exchange, var ex) -> exchange.getPrincipal().flatMap(principal -> {
-			final var response = exchange.getResponse();
+		return (ServerWebExchange exchange, AccessDeniedException ex) -> exchange.getPrincipal().flatMap(principal -> {
+			final ServerHttpResponse response = exchange.getResponse();
 			response.setStatusCode(principal instanceof AnonymousAuthenticationToken ? HttpStatus.UNAUTHORIZED : HttpStatus.FORBIDDEN);
 			response.getHeaders().setContentType(MediaType.TEXT_PLAIN);
-			final var dataBufferFactory = response.bufferFactory();
-			final var buffer = dataBufferFactory.wrap(ex.getMessage().getBytes(Charset.defaultCharset()));
+			final DataBufferFactory dataBufferFactory = response.bufferFactory();
+			final DataBuffer buffer = dataBufferFactory.wrap(ex.getMessage().getBytes(Charset.defaultCharset()));
 			return response.writeWith(Mono.just(buffer)).doOnError(error -> DataBufferUtils.release(buffer));
 		});
 	}
@@ -209,7 +216,7 @@ public class ReactiveSecurityBeans {
 		}
 
 		if (securityProperties.isCsrfEnabled()) {
-			final var configurer = http.csrf();
+			final CsrfSpec configurer = http.csrf();
 			if (securityProperties.isStatlessSessions()) {
 				configurer.csrfTokenRepository(new CookieServerCsrfTokenRepository());
 			}
